--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 
     <center class="align-content-center">
-        <img src="~/Logo.png" alt="logo" class="logo">
+        <img src="~/LogoVector.svg" alt="logo" class="logo">
         <h1>Ethereal Cloud</h1>
 
         <!-- Main box -->
@@ -33,7 +33,7 @@
             <div class="login">
                 <form method="post" asp-page-handler="Login">
                     <label class="labelbottom" for="chk" aria-hidden="true">Login</label>
-                    <input id="username" name="username" placeholder="Username Or Email" required="" />
+                    <input id="username" name="username" placeholder="Email or Username" required="" />
                     <input type="password" id="password" name="password" placeholder="Password" required="" />
                     <button type="submit">Login</button>
                 </form>
