--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -1,16 +1,93 @@
-﻿/* Button at top of page which will go soon */
-.temp-refresh-btn {
+﻿.upload-page {
+    padding-bottom: 10px;
+}
+
+.navbar-brand {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+    .navbar-brand img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        padding: 5px;
+    }
+
+
+.no-files{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    margin:0px;
+    height:100%;
+    align-items: center;
+}
+
+#file-explorer{
+    padding: 0px;
+    justify-content:center;
+}
+
+#toolbox {
+    padding-left: 0px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+#tools {
+    justify-content:center;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    background: #cbbbe2;
+    border: solid;
+    border-color: #7045BA;
+    border-radius: 20px;
     padding: 5px;
-    height: fit-content;
+}
+    #tool-row {
+        width: 100%;
+        display: contents;
+        cursor: pointer;
+    }
+    #tools img {
+        padding:0px;
+        max-width: 50px;
+    }
+    #tools p {
+        margin:0px;
+        padding:0px;
+        max-width: 50px;
+        overflow:hidden;
+        white-space:nowrap;
+    }
+
+
+
+/* This is where the scrollbox is contained */
+#filebox {
+    background: #f2f2f2;
+    border: solid;
+    border-color: #808080;
+    border-radius: 20px;
+    padding: 0px;
+    overflow: hidden;
 }
 
 /* This is where all the uploaded files are contained */
 #scrollbox {
     height: 48vh;
     max-height: inherit;
-    border: solid;
-    border-width: 2px;
     justify-content: center;
     overflow-y: scroll;
 }
@@ -36,17 +113,31 @@
     }
 
 /* Upload box (at bottom of page) */
-.upload-box {
+#upload-box {
     text-align: center;
     padding: 5px;
     justify-content: center;
     border: dashed;
+    border-color: #808080;
     height: min-content;
-    background-color: #dee4ec;
+    background-color: #e6e6e6;
+    border-radius: 20px
 }
 
 /* Input box for choosing a file */
 #file-input-box input {
+    overflow:auto;
     width: fit-content;
     display: inline-block;
 }
+
+/* Upload button */
+.btn {
+    background: #9877c5;
+    border-color: black;
+}
+
+    .btn:hover {
+        background-color: #705892;
+        border-color: black;
+    }
