--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -24,7 +24,7 @@
                     <input type="email" id="email" name="email" placeholder="Email" required="" />
                     <input type="password" id="password" name="password" placeholder="Password" required="" />
 
-                    <input type="password" id="confpassword" name="pswd" placeholder="Confirm password" required="">
+                    <input type="password" id="PasswordConf" name="PasswordConf" placeholder="Confirm password" required="">
                     <button type="submit">Sign Up</button>
                 </form>                        
             </div>
