File get & upload functional and styled

--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/Index.css" asp-append-version="true">
 
     <center class="align-content-center">
-        <img src="~/LogoVector.svg" alt="logo" class="logo">
+        <img src="~/images/LogoVector.svg" alt="logo" class="logo">
         <h1>Ethereal Cloud</h1>
 
         <!-- Main box -->
