--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -52,9 +52,6 @@
             <div id="toolbox" class="col-md-1">
                 <div id="tools">
                     <!-- Sort button -->
-                    <form id="tool-row" class="row" method="post">
-
-                    </form>
                     <div id="tool-row" class="row" onclick="toggleImage()">
                         <img id="toggleImage" class="col" src="~/images/tools/sort-alpha-down.svg" alt="Image 1">
                         <p class="col">Sort</p>
@@ -77,10 +74,10 @@
 
 
                     <!-- New folder button -->
-                    <div id="tool-row" class="row" onclick="">
+                    <a method="post" asp-page-handler="CreateFolder" asp-route-foldername="temp" id="tool-row" class="row">
                         <img class="col" src="~/images/tools/folder-plus.svg" alt="new-folder">
                         <p class="col">New</p>
-                    </div>
+                    </a>
 
                     <!-- Share button -->
                     <div id="tool-row" class="row" onclick="">
