--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -86,6 +86,7 @@
 
 /* This is where all the uploaded files are contained */
 #scrollbox {
+    width: 100%;
     height: 48vh;
     max-height: inherit;
     justify-content: center;
