--- a/Ethereal Cloud/wwwroot/css/Upload.css
+++ b/Ethereal Cloud/wwwroot/css/Upload.css
@@ -18,7 +18,6 @@
         padding: 5px;
     }
 
-
 .no-files{
     display: flex;
     align-items: center;
@@ -90,8 +89,43 @@
     overflow: hidden;
 }
 
+#filepath {
+    box-sizing: border-box;
+    border-bottom: solid #808080;
+    padding: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #cbbbe2;
+    box-shadow: inset 0px 0px 20px 0px #80808066;
+}
+
+#path-root {
+    display: contents;
+}
+    #path-root img{
+        height:25px;
+        padding-right: 5px;
+    }
+
+#path-folder {
+    display: contents;
+}
+
+#path-divider {
+    display: contents;
+    font-weight: bold;
+}
+
+
+#filepath-button {
+    text-align: center;
+}
+
+
+
 /* This is where all the uploaded files are contained */
 #scrollbox {
+    margin: 0px;
     width: 100%;
     height: 48vh;
     max-height: inherit;
@@ -140,6 +174,7 @@
 #file-input-box input {
     overflow:auto;
     width: fit-content;
+    max-width:100%;
     display: inline-block;
 }
 
