--- a/Ethereal Cloud/Pages/Index.cshtml
+++ b/Ethereal Cloud/Pages/Index.cshtml
@@ -19,7 +19,7 @@
             <div class="signup">
                 <form method="post" asp-page-handler="Signup">
                     <label class="labelstart" for="chk" aria-hidden="true">Sign up</label>
-                    <input id="username" name="username" placeholder="username" required="">
+                    <input id="username" name="username" placeholder="Username" required="">
 
                     <input type="email" id="email" name="email" placeholder="Email" required="" />
                     <input type="password" id="password" name="password" placeholder="Password" required="" />
